- Fixed: numerous compile errors using Sun CC compiler
- Fixed: incomplete Wiki markup of command line help due to incorrectly
    overloaded virtual member function
- Fixed: re-worked CMake build system to eliminate redundant repeated
    libraries
- Fixed: re-arranged "warp" command line parameters to avoid crashing Slicer,
    as it does not allow optional non-option parameters

- Improved: better, more data-drive automatic initialization of optimizer step
    sizes and image sampling parameters in pairwise rigid and nonrigid
    registration.
- Improved: more explicit handling of effective reference and floating volume
    in pairwise registration classes.

- Testing: added tests and baselines for average_images tool.


Release CMTK-1.1.2 (2009-10-28):

- Added: new multi-threading framework based on pools of continuously running
    threads. This should reduce thread creation overhead and also improve
    scheduling by allowing load balancing using over-partitioned tasks, i.e.,
    tasks split into substantially more parts than the number of CPUs.
- Added: logit and logistic functions for imagemath tool, for single and
    multiple images.
- Added: imagemath tool "--match-histograms" operation matches the intensity
    distribution of one image to that of another.
- Added: imagemath tool now supports image data padding.

- Fixed: basic reformatting in groupwise registration used slightly broken
    partitioning for SMP computation. This has been fixed.
- Fixed: NIFTI reader was not able to read files with detached 348-byte
    headers, i.e., headers without "extension" field.
- Fixed: BioRad header problem resulting from struct field alignment (patch by
    Greg Jefferis).
- Fixed: TemplateArray::GetRangeTemplate() now ignores non-finite values, which
    also fixes a crash in triplanar viewer when reading images with non-finite
    values.

- Improved: switched long and short options in command line help and wiki
    markup outputs.

