@@ -26,6 +26,8 @@ Release CMTK-1.1.3:
     libraries
 - Fixed: re-arranged "warp" command line parameters to avoid crashing Slicer,
     as it does not allow optional non-option parameters
+- Fixed: signal handler functions are now 'extern "C"' to avoid potential
+    problems of conflicting linkage
 
 - Improved: better, more data-drive automatic initialization of optimizer step
     sizes and image sampling parameters in pairwise rigid and nonrigid
